--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script data-main="scripts/main" src="https://aframe.io/releases/1.0.4/aframe.min.js">
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
     <!--
        
       manifest.json provides metadata used when your web app is installed on a
