aggiornate sezioni menu principali

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Corunner Virus Hackaton app for HackAtHome organized by Crispy Bacon"
     />
 
     <style>
@@ -62,7 +62,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Corunner Virus</title>
     <script>
       if (window.location.search.substr(1).length<=0)
         window.location.href="menu.html";
