fixed menu; fixed app

--- a/public/menu.html
+++ b/public/menu.html
@@ -14,18 +14,17 @@
     <style>
 
     .centralMenu {
-        position:fixed;
-        top: 25%;
-        left: 45%;
         width:40%;
-        height:60%;
-        margin-top: -9em; /*set to a negative number 1/2 of your height*/
-        margin-left: -15em; /*set to a negative number 1/2 of your width*/
+        height:90%;
+        margin-top: 2em; /*set to a negative number 1/2 of your height*/
+        margin-left: auto;
+        margin-right: auto;
         border: 1px solid white;
         background-color: #FF006F;
         border-radius: 10px;
         color: white;
         text-align: center;
+        padding-bottom: 2em;
     
     }
     .centralMenuContent{
