--- a/public/menu.html
+++ b/public/menu.html
@@ -26,7 +26,8 @@
         border-radius: 10px;
         color: white;
         text-align: center;
-
+        padding-left: 2%;
+        padding-right: 2%;
         padding-bottom: 2em;
     
     }
